--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -76,16 +76,14 @@ runs:
       shell: bash
       run: |
         mkdir ${{ runner.temp }}/certs
-        dotnet dev-certs https
-        sudo dotnet dev-certs https -np -ep ${{ runner.temp }}/certs/test.pem --format PEM
-        sudo update-ca-certificates
+        dotnet dev-certs https -np -ep ${{ runner.temp }}/certs/test.pem --format PEM
 
         kubectl create namespace keda
-        sudo kubectl create secret tls self-signed-ca \
+        kubectl create secret tls self-signed-ca \
           -n keda \
           --cert=${{ runner.temp }}/certs/test.pem \
           --key=${{ runner.temp }}/certs/test.key
-        sudo kubectl create secret tls server-tls \
+        kubectl create secret tls server-tls \
           -n keda \
           --cert=${{ runner.temp }}/certs/test.pem \
           --key=${{ runner.temp }}/certs/test.key
