--- a/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
@@ -70,18 +70,41 @@ spec:
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if .Values.env }}
+          {{- if or .Values.tls.secret .Values.env }}
           env:
+            {{- if .Values.tls.secret }}
+            - name: ASPNETCORE_URLS
+              value: https://+:8080
+            - name: Security__Transport__CertificatePath
+              value: /certs/tls.crt
+            - name: Security__Transport__KeyPath
+              value: /certs/tls.key
+            {{- end }}
+            {{- if .Values.env }}
             {{- toYaml .Values.env | nindent 12 -}}
+            {{- end }}
+          {{- end }}
+          {{- if .Values.tls.secret }}
+          volumeMounts:
+            - name: certs
+              mountPath: /certs
+              readOnly: true
           {{- end }}
           ports:
-          - name: grpc
-            containerPort: 8080
-            protocol: TCP
+            - name: grpc
+              containerPort: 8080
+              protocol: TCP
           {{- with .Values.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+      {{- if .Values.tls.secret }}
+      volumes:
+        - name: certs
+          secret:
+            secretName: {{ .Values.tls.secret }}
+            optional: false
+      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
