--- a/charts/durabletask-azurestorage-scaler/Chart.yaml
+++ b/charts/durabletask-azurestorage-scaler/Chart.yaml
@@ -2,7 +2,7 @@
 # Version corresponds to the chart version and should be updated every time the chart is changed.
 # AppVersion on the other hand should be updated every time the web app is changed.
 apiVersion: v2
-appVersion: 1.0.0-alpha.1
+appVersion: "1.0.0"
 description: A KEDA external scaler for the Durable Task Azure Storage backend
 home: https://github.com/wsugarman/durabletask-azurestorage-scaler
 icon: https://raw.githubusercontent.com/wsugarman/durabletask-azurestorage-scaler/main/img/storm-icon.png
@@ -17,20 +17,21 @@ name: durabletask-azurestorage-scaler
 sources:
   - https://github.com/wsugarman/durabletask-azurestorage-scaler
 type: application
-version: 1.0.0-alpha.1
+version: "1.0.0"
 
 annotations:
   artifacthub.io/changes: |
     - kind: added
-      description: TLS support
+      description: Added TLS support
+    - kind: changed
+      description: Updated NuGet dependencies
     - kind: security
       description: Updated dotnet/aspnet base image
   artifacthub.io/containsSecurityUpdates: "true"
   artifacthub.io/images: |
     - name: durabletask-azurestorage-scaler
-      image: ghcr.io/wsugarman/durabletask-azurestorage-scaler:1.0.0-alpha.1
+      image: ghcr.io/wsugarman/durabletask-azurestorage-scaler:1.0.0
   artifacthub.io/license: MIT
-  artifacthub.io/prerelease: "true"
   artifacthub.io/recommendations: |
     - url: https://artifacthub.io/packages/helm/kedacore/keda
   artifacthub.io/signKey: |
