--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -76,7 +76,7 @@ runs:
       shell: bash
       run: |
         kubectl create namespace keda
-        mkdir ${{ runner.temp }}/certs
+        mkdir -p ${{ runner.temp }}/certs
 
         # Create CA Root Certificate
         openssl req \
