Use Wildcards for GitHub Action Dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,71 +25,7 @@ updates:
     open-pull-requests-limit: 10
 
   - package-ecosystem: "github-actions"
-    directory: "/actions/chart-sync"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "America/Los_Angeles"
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: "github-actions"
-    directory: "/actions/code-coverage"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "America/Los_Angeles"
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: "github-actions"
-    directory: "/actions/docker-build"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "America/Los_Angeles"
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: "github-actions"
-    directory: "/actions/docker-push"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "America/Los_Angeles"
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: "github-actions"
-    directory: "/actions/dotnet-test"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "America/Los_Angeles"
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: "github-actions"
-    directory: "/actions/github-release"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "America/Los_Angeles"
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: "github-actions"
-    directory: "/actions/helm-package"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "America/Los_Angeles"
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: "github-actions"
-    directory: "/actions/helm-test"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "America/Los_Angeles"
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: "github-actions"
-    directory: "/actions/parse-chart"
+    directory: "/actions/**"
     schedule:
       interval: "daily"
       time: "09:00"
