--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -96,8 +96,8 @@ jobs:
           asset: ${{ runner.temp }}/image/durabletask-azurestorage-scaler-${{ steps.chart.outputs.imageTag }}.tar
           name: 'Durable Task KEDA External Scaler Image'
           prerelease: ${{ steps.chart.outputs.imagePrerelease }}
-          tag: 'Image_${{ steps.chart.outputs.imageTag }}'
-          version: ${{ steps.chart.outputs.imageTag }}
+          tag: 'Image_${{ steps.chart.outputs.imageTag }}.${{ steps.push.outputs.abbr }}'
+          version: ${{ steps.chart.outputs.imageTag }}.${{ steps.push.outputs.abbr }}
 
   publishChart:
     name: Publish Chart
