--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -97,7 +97,7 @@ jobs:
           name: 'Durable Task KEDA External Scaler Image'
           prerelease: ${{ steps.chart.outputs.imagePrerelease }}
           tag: 'Image_${{ steps.chart.outputs.imageTag }}.${{ steps.push.outputs.abbr }}'
-          version: ${{ steps.chart.outputs.imageTag }}.${{ steps.push.outputs.abbr }}
+          version: '${{ steps.chart.outputs.imageTag }}.${{ steps.push.outputs.abbr }}'
 
   publishChart:
     name: Publish Chart
