Enable Updates to Existing Docker Tags (#191)
- Create new workflow for manually pushing new docker images
- Update dotnet SDK version

--- a/.github/actions/docker-push/action.yml
+++ b/.github/actions/docker-push/action.yml
@@ -1,12 +1,17 @@
 name: docker push
 description: Loads and pushes the docker image if it does not already exist in the registry
 inputs:
+  force:
+    default: 'false'
+    description: Indicates whether the image should be pushed regardless of the tag existence
+    required: false
   gitHubToken:
     description: The GitHub access token from the secret context
     required: true
   imageArchive:
+    default: ''
     description: The tarball containing the docker image
-    required: true
+    required: false
   imageRepository:
     description: The repository used for the scaler image
     required: true
@@ -18,6 +23,9 @@ inputs:
     description: Indicates whether the image should also be pushed with the latest tag
     required: false
 outputs:
+  digest:
+    description: An abbreviated digest for the image
+    value: ${{ steps.metadata.outputs.digest }}
   success:
     description: Indicates whether the image was successfully pushed
     value: ${{ steps.exists.outputs.result != 'true' }}
@@ -27,7 +35,18 @@ runs:
   steps:
     - name: Load Docker Image
       shell: bash
+      if: ${{ inputs.imageArchive != '' }}
       run: docker load --input ${{ inputs.imageArchive }}
+
+    - name: Inspect Docker Image
+      id: metadata
+      shell: bash
+      run: |
+        result=$(docker image inspect ${{ inputs.imageRepository }}:${{ inputs.imageTag }} -f '{{index .RepoDigests 0}}')
+        digest=${result#*@}
+        digest=${digest#*:}
+        digest=${digest:0:7}
+        echo "digest=$digest" >> $GITHUB_OUTPUT
 
     - name: Login to ghcr.io
       uses: docker/login-action@v2
@@ -39,6 +58,7 @@ runs:
     - name: Check ghcr.io for Image Tag
       id: exists
       uses: actions/github-script@v6
+      if: ${{ inputs.force != 'true' }}
       with:
         script: |
           const repository = '${{ inputs.imageRepository }}';
@@ -73,7 +93,7 @@ runs:
 
     - name: Push Docker Image
       shell: bash
-      if: ${{ steps.exists.outputs.result != 'true' }}
+      if: ${{ (inputs.force == 'true') || (steps.exists.outputs.result != 'true') }}
       run: docker push ${{ inputs.imageRepository }}:${{ inputs.imageTag }}
 
     - name: Push Latest Docker Image
