--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -186,6 +186,12 @@ runs:
           ${{ inputs.functionAppName }} \
           ./charts/example-function-app
 
+    - name: Setup Go
+      uses: actions/setup-go@v4
+      with:
+        check-latest: true
+        go-version: '>=1.16.0'
+
     - name: Ensure Reachable Scaler Services
       shell: bash
       run: |
