Redirect stdout and test error

--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -199,16 +199,17 @@ runs:
           -plaintext \
           -import-path "${{ github.workspace }}/src/Keda.Scaler.DurableTask.AzureStorage/Protos" \
           -proto "externalscaler.proto" \
-          -d '{"name":"foo", "namespace":"bar", "scalerMetadata": {"connection":"baz"}}' \
+          -d '{"name":"foo", "namespace":"bar"}' \
           127.0.0.1:10003 \
-          externalscaler.ExternalScaler/GetMetricSpec
+          externalscaler.ExternalScaler/GetMetricSpec 1> /dev/null
+
         grpcurl \
           -cacert "${{ runner.temp }}/certs/root.pem" \
           -import-path "${{ github.workspace }}/src/Keda.Scaler.DurableTask.AzureStorage/Protos" \
           -proto "externalscaler.proto" \
           -d '{"name":"foo", "namespace":"bar", "scalerMetadata": {"connection":"baz"}}' \
           127.0.0.1:10004 \
-          externalscaler.ExternalScaler/GetMetricSpec
+          externalscaler.ExternalScaler/GetMetricSpec 1> /dev/null
 
     - name: Test Scaler
       shell: bash
