Group .NET SDK and Runtime PRs Together (#217)
- Create a Renovate group for the .NET SDK and runtime updates
- Fix `scalerAddress` edit in README

--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,17 @@
     "replacements:all",
     "workarounds:all"
   ],
-  "labels": ["dependencies"]
+  "labels": [
+    "dependencies"
+  ],
+  "packageRules": [
+    {
+      "groupName": "dotnetSdkRuntime",
+      "matchPackageNames": [
+        "dotnet-sdk",
+        "mcr.microsoft.com/dotnet/aspnet",
+        "mcr.microsoft.com/dotnet/sdk"
+      ]
+    }
+  ]
 }
