--- a/charts/durabletask-azurestorage-scaler/Chart.yaml
+++ b/charts/durabletask-azurestorage-scaler/Chart.yaml
@@ -17,17 +17,13 @@ name: durabletask-azurestorage-scaler
 sources:
   - https://github.com/wsugarman/durabletask-azurestorage-scaler
 type: application
-version: "1.0.0"
+version: "1.1.0"
 
 annotations:
   artifacthub.io/category: monitoring-logging
   artifacthub.io/changes: |
     - kind: added
-      description: Added TLS support
-    - kind: changed
-      description: Updated NuGet dependencies
-    - kind: security
-      description: Updated dotnet/aspnet base image
+      description: Added support for environment variables from config maps and secrets
   artifacthub.io/containsSecurityUpdates: "true"
   artifacthub.io/images: |
     - name: durabletask-azurestorage-scaler
