--- a/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
@@ -84,6 +84,10 @@ spec:
             {{- toYaml .Values.env | nindent 12 -}}
             {{- end }}
           {{- end }}
+          {{- if .Values.envFrom }}
+          envFrom:
+            {{- toYaml .Values.envFrom | nindent 12 -}}
+          {{- end }}
           {{- if .Values.tls.secret }}
           volumeMounts:
             - name: certs
