--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -2,26 +2,82 @@ name: docker test
 description: Builds the scaler docker image
 inputs:
   assemblyVersion:
-    description: The resulting assembly's version
+    description: The scaler assembly's version.
     required: true
   buildConfiguration:
     default: Debug
     description: The dotnet build configuration
     required: false
   fileVersion:
-    description: The resulting assembly's file version
+    description: The scaler assembly's file version.
     required: true
   imageRepository:
     default: durabletask-azurestorage-scaler
-    description: The repository used for the scaler image
+    description: The repository used for the scaler image.
     required: false
   imageTag:
-    description: The tag to use for the images
+    description: The tag to use for the images.
     required: true
+  sign:
+    default: 'false'
+    description: Indicates whether the assemblies in the image should be code signed.
+    required: false
+  azureTenantId:
+    default: ''
+    description: The Azure tenant ID for service principal used to access the Azure Code Signing Service.
+    required: false
+  azureClientId:
+    default: ''
+    description: The client ID for the service principal used to access the Azure Code Signing Service.
+    required: false
+  azureSubscriptionId:
+    default: ''
+    description: The Azure subscription ID containing both the Azure Code Signing Service.
+    required: false
+  azureCodeSigningAccountName:
+    default: ''
+    description: The name of the Azure Code Signing account containing the scaler's certificate profile.
+    required: false
+  certificateProfileName:
+    default: ''
+    description: The name of the certificate profile within the Azure Code Signing Service.
+  codeSigningUri:
+    default: 'https://wus.codesigning.azure.net/'
+    description: The URI of the Azure Code Signing Service.
+    required: false
+  repositoryUri:
+    default: 'https://github.com/wsugarman/durabletask-azurestorage-scaler'
+    description: The URI of the scaler repository.
+    required: false
 
 runs:
   using: composite
   steps:
+    - if: ${{ inputs.sign == 'true' }}
+      name: az login
+      uses: azure/login@v1
+      with:
+        client-id: ${{ inputs.azureClientId }}
+        tenant-id: ${{ inputs.azureTenantId }}
+        subscription-id: ${{ inputs.azureSubscriptionId }}
+
+    - if: ${{ inputs.sign == 'true' && success() }}
+      name: Create Signing Parameters
+      shell: bash
+      run: |
+        echo "{" >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"Endpoint\":\"${{ inputs.codeSigningUri }}\"," >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"CodeSigningAccountName\":\"${{ inputs.azureCodeSigningAccountName }}\"," >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"CertificateProfileName\":\"${{ inputs.certificateProfileName }}\"," >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"FilesFolder\":\"TODO\"," >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"FilesFolderFilter\":\"dll\"," >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"FileDigest\":\"SHA256\"," >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"TimestampRfc3161\":\"http://timestamp.acs.microsoft.com\"," >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"TimestampDigest\":\"SHA256\"," >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"Description\":\"${{ steps.assembly.outputs.description }}\"," >> "${{ runner.temp }}/signing/parameters.json"
+        echo "  \"DescriptionUrl\":\"${{ inputs.repositoryUri }}\"" >> "${{ runner.temp }}/signing/parameters.json"
+        echo "}" >> "${{ runner.temp }}/signing/parameters.json"
+
     - name: Generate OCI Labels
       id: meta
       uses: docker/metadata-action@v4
@@ -43,6 +99,8 @@ runs:
         file: ./src/Keda.Scaler.DurableTask.AzureStorage/Dockerfile
         labels: ${{ steps.meta.outputs.labels }}
         push: false
+        secret-files: |
+          TODO=TODO
         tags: ${{ steps.meta.outputs.tags }}
 
     - name: Save Image
@@ -57,3 +115,17 @@ runs:
       with:
         name: image
         path: ${{ runner.temp }}/image/durabletask-azurestorage-scaler-${{ inputs.imageTag }}.tar
+
+    - if: ${{ inputs.sign == 'true' && always() }}
+      name: Delete Signing Parameters
+      shell: bash
+      run: |
+        rm -f "${{ runner.temp }}/signing/parameters.json"
+
+    - if: ${{ inputs.sign == 'true' && always() }}
+      name: az logout
+      shell: bash
+      run: |
+        az logout
+        az cache purge
+        az account clear
